Добавлен контент: фото команды, описание проектов, обновлён README

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="lead-member" data-role="backend">
                         <div class="lead-avatar">
                             <div class="avatar-img">
-                                <span>СП</span>
+                                <span>СБ</span>
                             </div>
                         </div>
                         <h4>Степан Белоглазов</h4>
